--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-absl-py==0.7.1
-astor==0.8.0
-gast==0.2.2
-grpcio==1.21.1
+absl-py==2.1.0
+astor==0.4.0
+gast==0.5.4
+grpcio==1.62.0
 joblib==0.13.2
-Keras==2.2.4
-Keras-Applications==1.0.7
+Keras==2.11.0
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.0.9
-keras-squeezenet==0.4
-Markdown==3.1.1
+keras_squeezenet==0.4
+Markdown==3.4.4
 mock==3.0.5
-numpy==1.16.3
-opencv-python==4.1.0.25
-protobuf==3.7.1
-PyYAML==5.1
+numpy==1.21.6
+opencv-python==4.9.0.80
+protobuf==3.19.6
+PyYAML==6.0.1
 scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
+scipy==1.7.3
+six==1.16.0
+tensorboard==2.11.2
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+termcolor==2.3.0
 Werkzeug==0.15.4
-
+setuptools==69.1.1
